# qp_ai_vision

./: pyproject.toml  rsw_ai_conda_env.yml
notebooks/: temp.ipynb  testing.ipynb  tools.ipynb
src/rsw_ai/backend/: import_sshikamaru_car_object_detection_csv.py
src/rsw_ai/enum/: Dataset.py  ObjectClass.py  Platform.py
src/rsw_ai/interface/: BaseExporter.py  BaseImporter.py  Exporter.py  Importer.py
src/rsw_ai/model/: YoloDataset.py  YoloDatasetYaml.py  YoloExporter.py  YoloImporter.py
